--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,19 @@
   }
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 9%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
 
 
 @media (hover) {
